--- a/002_NN_tranieren.ipynb
+++ b/002_NN_tranieren.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,17 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training on CPU\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(\"cfg/train_real_images.yaml\", \"r\") as f:\n",
     "    config = yaml.safe_load(f)\n",
@@ -76,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,146 +331,14 @@
     "            train(ep, loader_train)\n",
     "\n",
     "        # save the trained model checkpoint\n",
-    "        save_checkpoint(arg.dir_base)\n",
-    "\n",
-    "        # think it is better here to safe the config file\n"
+    "        save_checkpoint(arg.dir_base)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training with grayscale images\n",
-      "160 training data loaded\n",
-      "training...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/24 [00:08<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ep: 0, loss_C loss_I: 0.27582 0.00192 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  4%|▍         | 1/24 [09:35<3:37:11, 566.59s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ep: 1, loss_C loss_I: 0.00265 0.00155 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  8%|▊         | 2/24 [18:53<3:25:50, 561.41s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ep: 2, loss_C loss_I: 0.00407 0.00139 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 12%|█▎        | 3/24 [28:43<3:21:06, 574.58s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ep: 3, loss_C loss_I: 0.00518 0.00129 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 17%|█▋        | 4/24 [38:56<3:15:05, 585.26s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ep: 4, loss_C loss_I: 0.00100 0.00118 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 21%|██        | 5/24 [59:46<4:22:26, 828.78s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ep: 5, loss_C loss_I: 0.00304 0.00106 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 25%|██▌       | 6/24 [1:15:55<4:23:02, 876.79s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ep: 6, loss_C loss_I: 0.00069 0.00100 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 25%|██▌       | 6/24 [1:21:32<4:04:38, 815.47s/it]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/002_NN_tranieren.ipynb Cell 21\u001b[0m in \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/002_NN_tranieren.ipynb#X26sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Execute \u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/002_NN_tranieren.ipynb#X26sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m main_train()\n",
-      "\u001b[1;32m/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/002_NN_tranieren.ipynb Cell 21\u001b[0m in \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/002_NN_tranieren.ipynb#X26sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m \u001b[39m# train for each epoch\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/002_NN_tranieren.ipynb#X26sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m \u001b[39mfor\u001b[39;00m ep \u001b[39min\u001b[39;00m trange(arg\u001b[39m.\u001b[39mep_train):\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/002_NN_tranieren.ipynb#X26sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m     train(ep, loader_train)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/002_NN_tranieren.ipynb#X26sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m \u001b[39m# save the trained model checkpoint\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/002_NN_tranieren.ipynb#X26sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m save_checkpoint(arg\u001b[39m.\u001b[39mdir_base)\n",
-      "\u001b[1;32m/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/002_NN_tranieren.ipynb Cell 21\u001b[0m in \u001b[0;36m5\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/002_NN_tranieren.ipynb#X26sZmlsZQ%3D%3D?line=47'>48</a>\u001b[0m optim\u001b[39m.\u001b[39mzero_grad()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/002_NN_tranieren.ipynb#X26sZmlsZQ%3D%3D?line=49'>50</a>\u001b[0m \u001b[39m# calculate and backpropagate the total loss\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/002_NN_tranieren.ipynb#X26sZmlsZQ%3D%3D?line=50'>51</a>\u001b[0m \u001b[39msum\u001b[39;49m([l \u001b[39mfor\u001b[39;49;00m l \u001b[39min\u001b[39;49;00m [lossC,lossI] \u001b[39mif\u001b[39;49;00m l \u001b[39mis\u001b[39;49;00m \u001b[39mnot\u001b[39;49;00m \u001b[39mNone\u001b[39;49;00m])\u001b[39m.\u001b[39;49mbackward()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/002_NN_tranieren.ipynb#X26sZmlsZQ%3D%3D?line=52'>53</a>\u001b[0m \u001b[39m# update the optimizer variables\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/002_NN_tranieren.ipynb#X26sZmlsZQ%3D%3D?line=53'>54</a>\u001b[0m optim\u001b[39m.\u001b[39mstep()\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/_tensor.py:487\u001b[0m, in \u001b[0;36mTensor.backward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    477\u001b[0m \u001b[39mif\u001b[39;00m has_torch_function_unary(\u001b[39mself\u001b[39m):\n\u001b[1;32m    478\u001b[0m     \u001b[39mreturn\u001b[39;00m handle_torch_function(\n\u001b[1;32m    479\u001b[0m         Tensor\u001b[39m.\u001b[39mbackward,\n\u001b[1;32m    480\u001b[0m         (\u001b[39mself\u001b[39m,),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    485\u001b[0m         inputs\u001b[39m=\u001b[39minputs,\n\u001b[1;32m    486\u001b[0m     )\n\u001b[0;32m--> 487\u001b[0m torch\u001b[39m.\u001b[39;49mautograd\u001b[39m.\u001b[39;49mbackward(\n\u001b[1;32m    488\u001b[0m     \u001b[39mself\u001b[39;49m, gradient, retain_graph, create_graph, inputs\u001b[39m=\u001b[39;49minputs\n\u001b[1;32m    489\u001b[0m )\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/autograd/__init__.py:200\u001b[0m, in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    195\u001b[0m     retain_graph \u001b[39m=\u001b[39m create_graph\n\u001b[1;32m    197\u001b[0m \u001b[39m# The reason we repeat same the comment below is that\u001b[39;00m\n\u001b[1;32m    198\u001b[0m \u001b[39m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[1;32m    199\u001b[0m \u001b[39m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[0;32m--> 200\u001b[0m Variable\u001b[39m.\u001b[39;49m_execution_engine\u001b[39m.\u001b[39;49mrun_backward(  \u001b[39m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[1;32m    201\u001b[0m     tensors, grad_tensors_, retain_graph, create_graph, inputs,\n\u001b[1;32m    202\u001b[0m     allow_unreachable\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, accumulate_grad\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Execute \n",
     "main_train()"
@@ -501,7 +361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
