--- a/000_Sam_Segmentation.ipynb
+++ b/000_Sam_Segmentation.ipynb
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = 'dataset/mini_testdatensatz'\n",
+    "path = 'dataset/dataset_large_2023_5_9'\n",
     "path = path + '/'\n",
     "device = \"cuda\"\n",
     "default_ratio = 3.5\n",
@@ -152,29 +152,34 @@
    "outputs": [],
    "source": [
     "for img_path in tqdm(img_path_list):\n",
-    "    img = cv2.imread(img_path)\n",
-    "    img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
-    "    masks = mask_generator.generate(img)\n",
-    "    sorted_masks = sorted(masks, key=(lambda x: x['area']), reverse=True)\n",
-    "    ratio_with_mask = [[],[]]\n",
+    "    try:\n",
+    "        img = cv2.imread(img_path)\n",
+    "        img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
+    "        masks = mask_generator.generate(img)\n",
+    "        sorted_masks = sorted(masks, key=(lambda x: x['area']), reverse=True)\n",
+    "        ratio_with_mask = [[],[]]\n",
     "\n",
-    "    for mask in sorted_masks:\n",
-    "        if mask['area'] > min_pixel and mask['area'] < max_pixel:\n",
-    "            maybe_plugmask = find_biggest_contiguous_area(mask['segmentation'])\n",
-    "            maybe_plugmask = np.array(maybe_plugmask, dtype=np.uint8)\n",
-    "            num_labels, labels, stats, centroids = cv2.connectedComponentsWithStats(maybe_plugmask)\n",
-    "            bbox = stats[1][:4]\n",
-    "            x,y,w,h = bbox\n",
-    "            ratio_with_mask[0].append(w/h)\n",
-    "            ratio_with_mask[1].append(maybe_plugmask)\n",
+    "        for mask in sorted_masks:\n",
+    "            if mask['area'] > min_pixel and mask['area'] < max_pixel:\n",
+    "                maybe_plugmask = find_biggest_contiguous_area(mask['segmentation'])\n",
+    "                maybe_plugmask = np.array(maybe_plugmask, dtype=np.uint8)\n",
+    "                num_labels, labels, stats, centroids = cv2.connectedComponentsWithStats(maybe_plugmask)\n",
+    "                bbox = stats[1][:4]\n",
+    "                x,y,w,h = bbox\n",
+    "                ratio_with_mask[0].append(w/h)\n",
+    "                ratio_with_mask[1].append(maybe_plugmask)\n",
     "\n",
-    "    closest_value = min(ratio_with_mask[0], key=lambda x: abs(x - default_ratio))\n",
-    "    closest_index = ratio_with_mask[0].index(closest_value)\n",
-    "    plug_mask = ratio_with_mask[1][closest_index]\n",
+    "        closest_value = min(ratio_with_mask[0], key=lambda x: abs(x - default_ratio))\n",
+    "        closest_index = ratio_with_mask[0].index(closest_value)\n",
+    "        plug_mask = ratio_with_mask[1][closest_index]\n",
     "\n",
-    "    plug_image = Image.fromarray(plug_mask.astype('uint8') * 255, mode='L')\n",
-    "    img_name = img_path.split('/')[-1]\n",
-    "    plug_image.save(path+'/segmentation_images/'+img_name)"
+    "        plug_image = Image.fromarray(plug_mask.astype('uint8') * 255, mode='L')\n",
+    "        img_name = img_path.split('/')[-1]\n",
+    "        plug_image.save(path+'/segmentation_images/'+img_name)\n",
+    "    except:\n",
+    "        print(img_path)\n",
+    "        continue\n",
+    "    "
    ]
   },
   {
