--- a/000_Sam_Segmentation.ipynb
+++ b/000_Sam_Segmentation.ipynb
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = 'dataset/dataset_large_2023_5_9'\n",
+    "path = '/home/scco0002/F&E_DeepLearning_VS/F-E-Project_Part_2/dataset/dataset_test'\n",
     "path = path + '/'\n",
     "device = \"cuda\"\n",
     "default_ratio = 3.5\n",
@@ -187,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# test singel images with different sizes"
+    "# test single images with different sizes"
    ]
   },
   {
