--- a/000_Sam_Segmentation.ipynb
+++ b/000_Sam_Segmentation.ipynb
@@ -20,6 +20,7 @@
     "import glob\n",
     "import os\n",
     "import torch\n",
+    "import shutil\n",
     "\n",
     "\n",
     "from skimage import measure\n",
@@ -46,12 +47,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '/home/scco0002/F&E_DeepLearning_VS/F-E-Project_Part_2/dataset/dataset_test'\n",
+    "path = 'dataset/dataset_test_bad segmentation'\n",
     "path = path + '/'\n",
     "device = \"cuda\"\n",
     "default_ratio = 3.5\n",
     "min_pixel = 12000 # für höhe 100 sehr guter wert: 12000\n",
-    "max_pixel = 24000 # für höhe 100 sehr guter wert: 24000"
+    "max_pixel = 35000 # für höhe 100 sehr guter wert: 24000"
    ]
   },
   {
@@ -91,10 +92,16 @@
    "source": [
     "if not os.path.exists(os.path.join(path,'segmentation_images')):\n",
     "    os.mkdir(os.path.join(path,'segmentation_images'))\n",
+    "if not os.path.exists(os.path.join(path,'segmentation_error')):\n",
+    "    os.mkdir(os.path.join(path,'segmentation_error'))\n",
     "\n",
-    "filelist = [ f for f in os.listdir(os.path.join(path,'segmentation_images'))]\n",
-    "for f in filelist:\n",
-    "    os.remove(os.path.join(path,'segmentation_images', f))"
+    "filelist_1 = [ f for f in os.listdir(os.path.join(path,'segmentation_images'))]\n",
+    "for f in filelist_1:\n",
+    "    os.remove(os.path.join(path,'segmentation_images', f))\n",
+    "\n",
+    "filelist_2 = [ f for f in os.listdir(os.path.join(path,'segmentation_error'))]\n",
+    "for f in filelist_2:\n",
+    "    os.remove(os.path.join(path,'segmentation_error', f))"
    ]
   },
   {
@@ -177,7 +184,7 @@
     "        img_name = img_path.split('/')[-1]\n",
     "        plug_image.save(path+'/segmentation_images/'+img_name)\n",
     "    except:\n",
-    "        print(img_path)\n",
+    "        shutil.move(img_path, path+'/segmentation_error/'+img_name)\n",
     "        continue\n",
     "    "
    ]
@@ -197,10 +204,10 @@
    "outputs": [],
    "source": [
     "im_size =[192,192] # [height, width]\n",
-    "number = 100 # number of image to show\n",
+    "number = 34360 # number of image to show\n",
     "\n",
-    "mask_path = path+'/segmentation_images/picture_'+str(number)+'.png'\n",
-    "img_path = path+'/train/picture_'+str(number)+'.png'"
+    "mask_path = path+'segmentation_images/picture_'+str(number)+'.png'\n",
+    "img_path = path+'train/picture_'+str(number)+'.png'"
    ]
   },
   {
