--- a/000_Sam_Segmentation.ipynb
+++ b/000_Sam_Segmentation.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = 'dataset/dataset_test_bad segmentation'\n",
+    "path = 'dataset/testfolder_segmentation'\n",
     "path = path + '/'\n",
     "device = \"cuda\"\n",
     "default_ratio = 3.5\n",
