--- a/001_Datensatz_analysieren2.ipynb
+++ b/001_Datensatz_analysieren2.ipynb
@@ -121,6 +121,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "if not os.path.exists(os.path.join(base_dir_copy,'segmentation_sorted_out')):\n",
+    "    os.mkdir(os.path.join(base_dir_copy,'segmentation_sorted_out'))\n",
+    "\n",
+    "if not os.path.exists(os.path.join(base_dir_copy,'segmentation_sorted_out/real_images')):\n",
+    "    os.mkdir(os.path.join(base_dir_copy,'segmentation_sorted_out/real_images'))\n",
+    "\n",
+    "if not os.path.exists(os.path.join(base_dir_copy,'segmentation_sorted_out/masks')):\n",
+    "    os.mkdir(os.path.join(base_dir_copy,'segmentation_sorted_out/masks'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sd = 4\n",
     "\n",
     "train_dir_copy = os.path.join(base_dir_copy, \"train\")\n",
@@ -132,10 +148,8 @@
     "\n",
     "for i in range(len(color_list[4])):\n",
     "    if color_list[4][i] < mean - threshold or color_list[4][i] > mean + threshold:\n",
-    "        os.remove(os.path.join(train_dir_copy, color_list[0][i]))\n",
-    "        print(\"Das Bild: \",os.path.join(train_dir_copy, color_list[0][i]),\" wurde entfernt.\")\n",
-    "        os.remove(os.path.join(seg_dir_copy, color_list[0][i]))\n",
-    "        print(\"Das Bild: \",os.path.join(seg_dir_copy, color_list[0][i]),\" wurde entfernt.\")"
+    "        shutil.move(os.path.join(train_dir_copy, color_list[0][i]), base_dir_copy+'/segmentation_sorted_out/real_images/'+color_list[0][i])\n",
+    "        shutil.move(os.path.join(seg_dir_copy, color_list[0][i]), base_dir_copy+'/segmentation_sorted_out/masks/'+color_list[0][i])"
    ]
   }
  ],
