--- a/002_NN_tranieren.ipynb
+++ b/002_NN_tranieren.ipynb
@@ -225,7 +225,7 @@
     "        # generate key points for the input image\n",
     "        keypL0 = enc(img)\n",
     "\n",
-    "        # calculate the concentration loss, which concentrates feature points around the edges of the object\n",
+    "        # calculate the concentration loss, which concentrates feature points around 2.5the edges of the object\n",
     "        # (not on the object itself due to the lack of object detection)\n",
     "        lossC = None\n",
     "        if arg.concentrate != 0:\n",
