--- a/006_Testnotebook.ipynb
+++ b/006_Testnotebook.ipynb
@@ -158,6 +158,37 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#  Missing Pictures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "# set the paths to your two folders\n",
+    "folder1_path = '/home/scco0002/F&E_DeepLearning_VS/F-E-Project_Part_2/dataset/dataset_large_2023_5_9_cleared/train'\n",
+    "folder2_path = '/home/scco0002/F&E_DeepLearning_VS/F-E-Project_Part_2/dataset/dataset_large_2023_5_9_cleared/segmentation_images'\n",
+    "\n",
+    "# get the set of filenames in each folder\n",
+    "folder1_files = set(os.listdir(folder1_path))\n",
+    "folder2_files = set(os.listdir(folder2_path))\n",
+    "\n",
+    "# find the set of filenames that are in folder2 but not in folder1\n",
+    "missing_files = folder2_files - folder1_files\n",
+    "\n",
+    "# print the missing filenames\n",
+    "print(missing_files)\n"
+   ]
   }
  ],
  "metadata": {
