--- a/002_NN_tranieren.ipynb
+++ b/002_NN_tranieren.ipynb
@@ -27,6 +27,7 @@
     "import torch.optim\n",
     "import torch.utils.data.dataloader as loader\n",
     "import torch.nn.functional as F\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "from train_dataset import DataServoStereo\n",
     "import train_model as model\n",
@@ -94,6 +95,15 @@
     "    cudnn.enabled = True\n",
     "    cudnn.benchmark = True\n",
     "    cudnn.deterministic = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.cuda.empty_cache() "
    ]
   },
   {
@@ -205,6 +215,9 @@
     "    \n",
     "    # iterate over the training data loader\n",
     "    #for i, (inL0,outS_Tensor,outS) in enumerate(loader_train):\n",
+    "    lossC_epoch = []\n",
+    "    lossI_epoch = []\n",
+    "\n",
     "    for i, (img,plug_mask_tensor,plug_mask) in enumerate(loader_train):\n",
     "\n",
     "        # enable GPU if enabled in arguments\n",
@@ -260,10 +273,18 @@
     "        if i == 0:\n",
     "            if arg.concentrate == 0:\n",
     "                tqdm.write('ep: {}, loss_I: {:.5f}  '.format(ep,lossI.item()))\n",
+    "                lossC_epoch.append(lossC.item())\n",
+    "\n",
     "            elif arg.inside == 0:\n",
     "                tqdm.write('ep: {}, loss_C: {:.5f}  '.format(ep,lossC.item()))\n",
+    "                lossI_epoch.append(lossI.item())\n",
+    "                \n",
     "            else:\n",
-    "                tqdm.write('ep: {}, loss_C loss_I: {:.5f} {:.5f} '.format(ep,lossC.item(), lossI.item()))\n"
+    "                tqdm.write('ep: {}, loss_C loss_I: {:.5f} {:.5f} '.format(ep,lossC.item(), lossI.item()))\n",
+    "                lossC_epoch.append(lossC.item())\n",
+    "                lossI_epoch.append(lossI.item())\n",
+    "\n",
+    "    return lossC_epoch, lossI_epoch\n"
    ]
   },
   {
@@ -301,6 +322,8 @@
    "outputs": [],
    "source": [
     "def main_train():\n",
+    "    loss = [[],[]]\n",
+    "\n",
     "    if arg.task in ['full']:\n",
     "        # create directory to save data\n",
     "        if not os.path.exists(arg.dir_base):\n",
@@ -328,10 +351,15 @@
     "        print('training...')\n",
     "        # train for each epoch\n",
     "        for ep in trange(arg.ep_train):\n",
-    "            train(ep, loader_train)\n",
+    "            lossC_epoch, lossI_epoch = train(ep, loader_train)\n",
+    "        \n",
+    "            loss[0].extend(lossC_epoch)\n",
+    "            loss[1].extend(lossI_epoch)\n",
     "\n",
     "        # save the trained model checkpoint\n",
-    "        save_checkpoint(arg.dir_base)\n"
+    "        save_checkpoint(arg.dir_base)\n",
+    "\n",
+    "        return loss\n"
    ]
   },
   {
@@ -341,7 +369,22 @@
    "outputs": [],
    "source": [
     "# Execute \n",
-    "main_train()"
+    "loss = main_train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure()\n",
+    "plt.plot(loss[0], label='Concentration Loss')\n",
+    "plt.plot(loss[1], label='Inside Loss')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.legend()\n",
+    "plt.show()\n"
    ]
   }
  ],
