--- a/003_NN_testen.ipynb
+++ b/003_NN_testen.ipynb
@@ -71,7 +71,8 @@
     "    torch.cuda.device_count()\n",
     "    torch.cuda.current_device()\n",
     "    torch.cuda.device(0)\n",
-    "    torch.cuda.get_device_name(0)"
+    "    torch.cuda.get_device_name(0)\n",
+    "    torch.cuda.empty_cache() "
    ]
   },
   {
