--- a/003_NN_testen.ipynb
+++ b/003_NN_testen.ipynb
@@ -162,6 +162,7 @@
     "        # forward-pass\n",
     "        keypL = enc(img) # left picture\n",
     "        keyp = keypL[1].detach().squeeze().cpu().numpy() #convert tensor to numpy array\n",
+    "        print(keyp.shape)\n",
     "        \n",
     "\n",
     "        # keypoint_pos is the position of the keypoint in the array so also in the image\n",
