--- a/007_Analyse_Servoing.ipynb
+++ b/007_Analyse_Servoing.ipynb
@@ -64,7 +64,8 @@
     "    for i in range(len(featurepoints)):\n",
     "        pixel_error_x = goal_featurepoints[i][0]-featurepoints[i][0]\n",
     "        pixel_error_y = goal_featurepoints[i][1]-featurepoints[i][1]\n",
-    "        pixel_error[i].append([pixel_error_x, pixel_error_y])"
+    "        pixel_error[i].append([pixel_error_x, pixel_error_y])\n",
+    "        "
    ]
   },
   {
@@ -73,7 +74,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "keypoint_number = 4 # starts with 0\n",
+    "# mean pixel error\n",
+    "mean_pixel_error = []\n",
+    "for i in range(len(pixel_error)):\n",
+    "    mean_pixel_error.append([])\n",
+    "    mean_pixel_error[i] = [sum(x)/len(x) for x in zip(*pixel_error[i])]\n",
+    "\n",
+    "keypoints_selected = []\n",
+    "\n",
+    "for i in range(len(mean_pixel_error)):\n",
+    "    if abs(mean_pixel_error[i][1]) > 0:\n",
+    "        keypoints_selected.append(i)\n",
+    "\n",
+    "print(keypoints_selected)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keypoint_number = 5 # starts with 0\n",
     "\n",
     "plt.plot(pixel_error[keypoint_number])\n",
     "plt.legend(['x', 'y'], loc='lower right')\n"
@@ -96,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
