--- a/006_Testnotebook.ipynb
+++ b/006_Testnotebook.ipynb
@@ -189,6 +189,31 @@
     "# print the missing filenames\n",
     "print(missing_files)\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Regeltakt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "import time\n",
+    "starttime = datetime.datetime.now()\n",
+    "time.sleep(5)\n",
+    "endtime = datetime.datetime.now()\n",
+    "counter = 100\n",
+    "\n",
+    "# deltatime in seconds\n",
+    "print(1/((endtime - starttime).seconds/counter))"
+   ]
   }
  ],
  "metadata": {
