--- a/007_Analyse_Servoing.ipynb
+++ b/007_Analyse_Servoing.ipynb
@@ -33,7 +33,7 @@
    "outputs": [],
    "source": [
     "# Call the function to read the CSV file and get the rows in a list\n",
-    "goal_featurepoints, servoing_steps = read_csv_file(\"servoing_csv/keypoints_servoing_x_005.csv\")\n",
+    "goal_featurepoints, servoing_steps = read_csv_file(\"servoing_csv/keypoints_servoing_10000.csv\")\n",
     "\n",
     "goal_featurepoints = goal_featurepoints[0]\n",
     "goal_featurepoints = eval(goal_featurepoints)"
@@ -82,8 +82,9 @@
     "\n",
     "keypoints_selected = []\n",
     "\n",
+    "\n",
     "for i in range(len(mean_pixel_error)):\n",
-    "    if abs(mean_pixel_error[i][1]) > 0:\n",
+    "    if abs(mean_pixel_error[i][0]) > 1 or abs(mean_pixel_error[i][1]) > 1:\n",
     "        keypoints_selected.append(i)\n",
     "\n",
     "print(keypoints_selected)"
@@ -95,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "keypoint_number = 5 # starts with 0\n",
+    "keypoint_number = 40# starts with 0\n",
     "\n",
     "plt.plot(pixel_error[keypoint_number])\n",
     "plt.legend(['x', 'y'], loc='lower right')\n"
