--- a/007_Analyse_Servoing.ipynb
+++ b/007_Analyse_Servoing.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "goal_informations, servoing_informations= read_csv_file(\"servoing_csv/keypoints_servoing_40000_ohne_camtime.csv\")"
+    "goal_informations, servoing_informations= read_csv_file(\"servoing_csv/keypoints_servoing.csv\")"
    ]
   },
   {
@@ -178,7 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "keypoint_number = 3 # starts with 0\n",
+    "keypoint_number = 22 # starts with 0\n",
     "\n",
     "plt.plot(pixel_error[keypoint_number])\n",
     "plt.xlabel('Servoing Step')\n",
@@ -187,6 +187,30 @@
     "plt.legend(['x-error of Keypoint '+str(keypoint_number), 'y-error of the Keypoint '+str(keypoint_number)], loc='lower center', bbox_to_anchor=(0.5, -0.3), ncol=2)\n",
     "plt.show()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_keypoints = 41  # Assuming num_keypoints is the total number of keypoints\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))  # Optional: Set the size of the figure\n",
+    "\n",
+    "for keypoint_number in range(num_keypoints):  # Assuming num_keypoints is the total number of keypoints\n",
+    "    plt.plot(pixel_error[keypoint_number])\n",
+    "\n",
+    "plt.xlabel('Servoing Step')\n",
+    "plt.ylabel('Pixel Error')\n",
+    "plt.title('Pixel Error of All Keypoints')\n",
+    "\n",
+    "# Generate labels for the legend\n",
+    "legend_labels = ['Keypoint {}'.format(keypoint_number) for keypoint_number in range(num_keypoints)]\n",
+    "\n",
+    "#plt.legend(legend_labels, loc='lower center', bbox_to_anchor=(0.5, -0.3), ncol=2)\n",
+    "plt.show()\n"
    ]
   },
   {
