features points etc.

--- a/006_Testnotebook.ipynb
+++ b/006_Testnotebook.ipynb
@@ -214,6 +214,117 @@
     "# deltatime in seconds\n",
     "print(1/((endtime - starttime).seconds/counter))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Vergleich Controller Matlab / Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## neue Klasse für IBVS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from numpy.linalg import inv\n",
+    "from scipy import linalg\n",
+    "\n",
+    "class VisualServoingController:\n",
+    "    def __init__(self, z=0.1):\n",
+    "        self.z = z\n",
+    "\n",
+    "    def get_feature_jacobian(self, u, v):\n",
+    "        Jf = np.array([\n",
+    "            [-1/self.z, 0, u/self.z, u*v, -(1 + u**2), v],\n",
+    "            [0, -1/self.z, v/self.z, 1 + v**2, -v*u, -u]\n",
+    "        ])\n",
+    "        return Jf\n",
+    "\n",
+    "    def get_stack_feature_jacobian(self, feature_pts):\n",
+    "        Jfstack = None\n",
+    "        for i in range(feature_pts.shape[0]):\n",
+    "            u, v = feature_pts[i]\n",
+    "            Jf = self.get_feature_jacobian(u, v)\n",
+    "            if i == 0:\n",
+    "                Jfstack = Jf\n",
+    "            else:\n",
+    "                Jfstack = np.vstack((Jfstack, Jf))\n",
+    "        return Jfstack\n",
+    "\n",
+    "    def ibvs_controller(self, Jf, f_act, f_des, kIBVS):\n",
+    "        e_u = f_des[:,0] - f_act[:,0]\n",
+    "        #print(e_u)\n",
+    "        e_v = f_des[:,1] - f_act[:,1]\n",
+    "        #print(e_v)\n",
+    "        e = np.empty(2 * len(e_u))\n",
+    "        e[::2] = e_u\n",
+    "        e[1::2] = e_v\n",
+    "        # transform e to a column vector\n",
+    "        #e = e.reshape(-1, 1)\n",
+    "        dp = kIBVS * (np.linalg.inv(Jf.T @ Jf)) @ Jf.T @ e\n",
+    "        return dp\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Actual positions of four features\n",
+    "f_act_good = np.array([[100, 200], [150, 250], [300, 400],[10,20]])\n",
+    "# Desired positions of the four features\n",
+    "f_des_good = np.array([[123, 212], [142, 250], [365, 401],[84,12]])\n",
+    "\n",
+    "f_act_bad = np.array([[100, 200], [150, 250], [300, 400]]) # denken diese Werte sind linear abhängig\n",
+    "f_des_bad = np.array([[110, 210], [160, 260], [310, 410]]) # denken diese Werte sind linear abhängig\n",
+    "\n",
+    "version = \"bad\"\n",
+    "\n",
+    "if version == \"bad\":\n",
+    "\n",
+    "    f_act = f_act_bad\n",
+    "    f_des = f_des_bad\n",
+    "\n",
+    "else: # version == \"good\"\n",
+    "    f_act = f_act_good\n",
+    "    f_des = f_des_good\n",
+    "\n",
+    "# Create a controller object\n",
+    "controller = VisualServoingController(z=0.1)\n",
+    "\n",
+    "# Calculate the Jacobian of the features\n",
+    "Jf =  controller.get_stack_feature_jacobian(f_act)\n",
+    "# Set the gain of the IBVS controller\n",
+    "KiBVS = 0.001\n",
+    "\n",
+    "Jf_1 = Jf.T @ Jf\n",
+    "print(\"Jf_1\",Jf_1)\n",
+    "print(\"\\n\")\n",
+    "Jf_2 = np.linalg.inv(Jf_1)\n",
+    "print(\"Jf_2\",Jf_2)\n",
+    "print(\"\\n\")\n",
+    "# Calculate the determinant\n",
+    "determinate = np.linalg.det(Jf.T @ Jf)\n",
+    "print(\"determinate\",determinate)\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# Calculate the control input\n",
+    "dp = controller.ibvs_controller(Jf, f_act, f_des, KiBVS)\n",
+    "print(\"dp\",dp)\n"
+   ]
   }
  ],
  "metadata": {
