--- a/007_Analyse_Servoing.ipynb
+++ b/007_Analyse_Servoing.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "goal_informations, servoing_informations= read_csv_file(\"servoing_csv/keypoints_servoing.csv\")"
+    "goal_informations, servoing_informations= read_csv_file(\"servoing_csv/keypoints_servoing_hough.csv\")"
    ]
   },
   {
@@ -105,21 +105,23 @@
     "ax1.plot(time_for_keypoint_extraction, label=\"Time for Interference + Keypoint Extraction\")\n",
     "ax1.plot(time_for_servoing_loop, label=\"Time for Servoing Loop\")\n",
     "ax1.plot(time_for_picture, label=\"Time for Taking a Picture\")\n",
-    "ax1.set_xlabel(\"Servoing Step\")\n",
-    "ax1.set_ylabel(\"Time in s\")\n",
-    "legend = ax1.legend(loc='lower center', bbox_to_anchor=(0.5, -0.15), ncol=5)\n",
+    "ax1.set_xlabel(\"Servoing Step\", fontsize=14)\n",
+    "ax1.set_ylabel(\"Time in s\", fontsize=14)\n",
+    "legend = ax1.legend(loc='lower center', bbox_to_anchor=(0.5, -0.3), ncol=2, fontsize=14)\n",
     "ax1.set_ylim(0, max(mean_interference_neural_networks, mean_time_for_keypoint_extraction, mean_time_for_servoing_loop)*1.4)\n",
     "ax1.title.set_text('Time Values while Servoing')\n",
+    "ax1.title.set_fontsize(18)\n",
     "\n",
     "# Plot the mean values on the right subplot (ax2)\n",
     "ax2.axhline(y=mean_interference_neural_networks, color=\"blue\",label=\"Mean Interference Neural Network\")\n",
     "ax2.axhline(y=mean_time_for_keypoint_extraction, color=\"orange\",label=\"Mean Time for Interference + Keypoint Extraction\")\n",
     "ax2.axhline(y=mean_time_for_servoing_loop, color=\"green\",label=\"Mean for Servoing Loop\")\n",
     "ax2.axhline(y=mean_time_for_picture, color=\"red\",label=\"Mean for Taking a Picture\")\n",
-    "ax2.set_ylabel(\"Time in s\")\n",
-    "legend = ax2.legend(loc='lower center', bbox_to_anchor=(0.5, -0.15), ncol=5)\n",
+    "ax2.set_ylabel(\"Time in s\", fontsize=14)\n",
+    "legend = ax2.legend(loc='lower center', bbox_to_anchor=(0.5, -0.3), ncol=2, fontsize=14)\n",
     "ax2.set_ylim(0, max(mean_interference_neural_networks, mean_time_for_keypoint_extraction, mean_time_for_servoing_loop)*1.4)\n",
     "ax2.title.set_text('Mean Time Values')\n",
+    "ax2.title.set_fontsize(18)\n",
     "\n",
     "# Display the plot\n",
     "plt.suptitle('Time Values while Servoing', fontsize=24)\n",
@@ -249,14 +251,14 @@
     "\n",
     "ax1.plot(velocity[0])\n",
     "ax1.set_title(\"Velocity in x-direction\")\n",
-    "ax1.set_xlabel(\"Servoing Step\")\n",
-    "ax1.set_ylabel(\"Velocity in m/s\")\n",
+    "ax1.set_xlabel(\"Servoing Step\", fontsize=16)\n",
+    "ax1.set_ylabel(\"Velocity in m/s\", fontsize=16)\n",
     "\n",
     "\n",
     "ax2.plot(velocity[1])\n",
     "ax2.set_title(\"Velocity in y-direction\")\n",
-    "ax2.set_xlabel(\"Servoing Step\")\n",
-    "ax2.set_ylabel(\"Velocity in m/s\")\n",
+    "ax2.set_xlabel(\"Servoing Step\", fontsize=16)\n",
+    "ax2.set_ylabel(\"Velocity in m/s\", fontsize=16)\n",
     "\n",
     "plt.suptitle('Twist while Servoing', fontsize=24)\n",
     "plt.show()"
