--- a/006_Testnotebook.ipynb
+++ b/006_Testnotebook.ipynb
@@ -247,7 +247,7 @@
     "        Jf = np.array([\n",
     "            [-1/self.z, 0, u/self.z, u*v, -(1 + u**2), v],\n",
     "            [0, -1/self.z, v/self.z, 1 + v**2, -v*u, -u]\n",
-    "        ])\n",
+    "        ], dtype=np.float64)\n",
     "        return Jf\n",
     "\n",
     "    def get_stack_feature_jacobian(self, feature_pts):\n",
@@ -284,12 +284,12 @@
     "import numpy as np\n",
     "\n",
     "# Actual positions of four features\n",
-    "f_act_good = np.array([[100, 200], [150, 250], [300, 400],[10,20]])\n",
+    "f_act_good = np.array([[100, 200], [150, 250], [300, 400],[10,20]], dtype=np.float64)\n",
     "# Desired positions of the four features\n",
-    "f_des_good = np.array([[123, 212], [142, 250], [365, 401],[84,12]])\n",
+    "f_des_good = np.array([[123, 212], [142, 250], [365, 401],[84,12]], dtype=np.float64)\n",
     "\n",
-    "f_act_bad = np.array([[100, 200], [150, 250], [300, 400]]) # denken diese Werte sind linear abhängig\n",
-    "f_des_bad = np.array([[110, 210], [160, 260], [310, 410]]) # denken diese Werte sind linear abhängig\n",
+    "f_act_bad = np.array([[100, 200], [150, 250], [300, 400]],dtype=np.float64) # denken diese Werte sind linear abhängig\n",
+    "f_des_bad = np.array([[110, 210], [160, 260], [310, 410]],dtype=np.float64) # denken diese Werte sind linear abhängig\n",
     "\n",
     "version = \"bad\"\n",
     "\n",
@@ -314,10 +314,10 @@
     "print(\"Jf_1\",Jf_1)\n",
     "print(\"\\n\")\n",
     "Jf_2 = np.linalg.inv(Jf_1)\n",
-    "print(\"Jf_2\",Jf_2)\n",
+    "print(Jf_2)\n",
     "print(\"\\n\")\n",
     "# Calculate the determinant\n",
-    "determinate = np.linalg.det(Jf.T @ Jf)\n",
+    "determinate = np.linalg.det(Jf_1)\n",
     "print(\"determinate\",determinate)\n",
     "print(\"\\n\")\n",
     "\n",
