--- a/009_hough.ipynb
+++ b/009_hough.ipynb
@@ -77,7 +77,7 @@
     "    # If not enough keypoints are found and the maximum number of attempts is not reached\n",
     "    if len(keypoints) < 8 and attempts < max_attempts:\n",
     "        print(f\"Not enough keypoints found. Attempt {attempts + 1} of {max_attempts}\")\n",
-    "        return get_keypoints_hough(image, attempts=attempts+1)\n",
+    "        return get_keypoints_hough_new(image, attempts=attempts+1)\n",
     "    elif attempts == max_attempts:\n",
     "        print(f\"Maximum number of attempts reached. Found {len(keypoints)} keypoints.\")\n",
     "    \n",
@@ -92,6 +92,143 @@
    "source": [
     "image_goal= cv2.imread('testblob2.png')\n",
     "keypoints_goal = get_keypoints_hough_new(image_goal)\n",
+    "print (keypoints_goal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_keypoints_hough(image, attempts=0, max_attempts=1):\n",
+    "    gray_image = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "    \n",
+    "    # Adaptive Threshold the grayscale image to get a binary image\n",
+    "    binary_image = cv2.adaptiveThreshold(gray_image, 255, cv2.ADAPTIVE_THRESH_GAUSSIAN_C,\n",
+    "                                         cv2.THRESH_BINARY, 11, 2)\n",
+    "    \n",
+    "    circles = cv2.HoughCircles(binary_image, cv2.HOUGH_GRADIENT, dp=1, minDist=50,\n",
+    "                                param1=200, param2=30, minRadius=5, maxRadius=200)\n",
+    "    \n",
+    "    keypoints = []\n",
+    "    if circles is not None:\n",
+    "        circles = np.round(circles[0, :]).astype(int)\n",
+    "        for (x, y, r) in circles:\n",
+    "            cv2.circle(image, (x, y), r, (0, 255, 0), 2)\n",
+    "            keypoints.append([x, y])\n",
+    "    else:\n",
+    "        print(\"No circles found.\")\n",
+    "    \n",
+    "    # If not enough keypoints are found and the maximum number of attempts is not reached\n",
+    "    if len(keypoints) < 8 and attempts < max_attempts:\n",
+    "        print(f\"Not enough keypoints found. Attempt {attempts + 1} of {max_attempts}\")\n",
+    "        return get_keypoints_hough(image, attempts=attempts+1)\n",
+    "    elif attempts == max_attempts:\n",
+    "        print(f\"Maximum number of attempts reached. Found {len(keypoints)} keypoints.\")\n",
+    "    \n",
+    "\n",
+    "    return keypoints\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_goal= cv2.imread('testblob2.png')\n",
+    "keypoints_goal = get_keypoints_hough(image_goal)\n",
+    "print (keypoints_goal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_keypoints_hough(image, attempts=0, max_attempts=10):\n",
+    "    gray_image = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "    \n",
+    "    # Threshold the grayscale image to get a binary image\n",
+    "    _, binary_image = cv2.threshold(gray_image, 255, cv2.THRESH_BINARY)\n",
+    "    \n",
+    "    circles = cv2.HoughCircles(binary_image, cv2.HOUGH_GRADIENT, dp=1, minDist=50,\n",
+    "                                param1=100, param2=600, minRadius=50, maxRadius=250)\n",
+    "    \n",
+    "    keypoints = []\n",
+    "    if circles is not None:\n",
+    "        circles = np.round(circles[0, :]).astype(int)\n",
+    "        for (x, y, r) in circles:\n",
+    "            cv2.circle(image, (x, y), r, (0, 255, 0), 2)\n",
+    "            keypoints.append([x, y])\n",
+    "    else:\n",
+    "        print(\"No circles found.\")\n",
+    "    \n",
+    "    # If not enough keypoints are found and the maximum number of attempts is not reached\n",
+    "    if len(keypoints) < 8 and attempts < max_attempts:\n",
+    "        print(f\"Not enough keypoints found. Attempt {attempts + 1} of {max_attempts}\")\n",
+    "        return get_keypoints_hough(image, attempts=attempts+1)\n",
+    "    elif attempts == max_attempts:\n",
+    "        print(f\"Maximum number of attempts reached. Found {len(keypoints)} keypoints.\")\n",
+    "    \n",
+    "    return keypoints"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_goal= cv2.imread('testblob2.png')\n",
+    "keypoints_goal = get_keypoints_hough(image_goal)\n",
+    "print (keypoints_goal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_keypoints_hough(image, attempts=0, max_attempts=50):\n",
+    "    gray_image = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "    blurred_image = cv2.GaussianBlur(gray_image, (5, 5), 0)\n",
+    "    circles = cv2.HoughCircles(blurred_image, cv2.HOUGH_GRADIENT, dp=1, minDist=50,\n",
+    "                                param1=30, param2=30, minRadius=20, maxRadius=150)\n",
+    "    # param 2 min 30\n",
+    "    \n",
+    "    keypoints = []\n",
+    "    if circles is not None:\n",
+    "        circles = np.round(circles[0, :]).astype(int)\n",
+    "        for (x, y, r) in circles:\n",
+    "            cv2.circle(image, (x, y), r, (0, 255, 0), 2)\n",
+    "            keypoints.append([x,y])\n",
+    "    else:\n",
+    "        print(\"No circles found.\")\n",
+    "    \n",
+    "    # If not enough keypoints are found and the maximum number of attempts is not reached\n",
+    "    if len(keypoints) < 6 and attempts < max_attempts:\n",
+    "        print(f\"Not enough keypoints found. Attempt {attempts + 1} of {max_attempts}\")\n",
+    "        return get_keypoints_hough(image, attempts=attempts+1)\n",
+    "    elif attempts == max_attempts:\n",
+    "        print(f\"Maximum number of attempts reached. Found {len(keypoints)} keypoints.\")\n",
+    "    \n",
+    "    \n",
+    "    return keypoints\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_goal= cv2.imread('Kreise_fulled.png')\n",
+    "keypoints_goal = get_keypoints_hough(image_goal)\n",
     "print (keypoints_goal)"
    ]
   }
