--- a/006_Testnotebook.ipynb
+++ b/006_Testnotebook.ipynb
@@ -263,15 +263,19 @@
     "\n",
     "    def ibvs_controller(self, Jf, f_act, f_des, kIBVS):\n",
     "        e_u = f_des[:,0] - f_act[:,0]\n",
-    "        #print(e_u)\n",
+    "        print(e_u)\n",
     "        e_v = f_des[:,1] - f_act[:,1]\n",
-    "        #print(e_v)\n",
-    "        e = np.empty(2 * len(e_u))\n",
+    "        print(e_v)\n",
+    "        e = np.empty((2 * len(e_u)), dtype=np.float64)\n",
     "        e[::2] = e_u\n",
     "        e[1::2] = e_v\n",
+    "        print(e)\n",
+    "        print(Jf.shape)\n",
     "        # transform e to a column vector\n",
     "        #e = e.reshape(-1, 1)\n",
-    "        dp = kIBVS * (np.linalg.inv(Jf.T @ Jf)) @ Jf.T @ e\n",
+    "        #dp = kIBVS * (np.linalg.inv(Jf.T @ Jf)) @ Jf.T @ e\n",
+    "\n",
+    "        dp = kIBVS * (np.linalg.pinv(Jf)) @ e\n",
     "        return dp\n"
    ]
   },
@@ -293,7 +297,7 @@
     "\n",
     "version = \"bad\"\n",
     "\n",
-    "if version == \"bad\":\n",
+    "if version == \"goog\":\n",
     "\n",
     "    f_act = f_act_bad\n",
     "    f_des = f_des_bad\n",
@@ -308,22 +312,53 @@
     "# Calculate the Jacobian of the features\n",
     "Jf =  controller.get_stack_feature_jacobian(f_act)\n",
     "# Set the gain of the IBVS controller\n",
-    "KiBVS = 0.001\n",
+    "KiBVS = 0.01\n",
     "\n",
     "Jf_1 = Jf.T @ Jf\n",
-    "print(\"Jf_1\",Jf_1)\n",
-    "print(\"\\n\")\n",
+    "#print(\"Jf_1\",Jf_1)\n",
+    "#print(\"\\n\")\n",
     "Jf_2 = np.linalg.inv(Jf_1)\n",
-    "print(Jf_2)\n",
-    "print(\"\\n\")\n",
+    "#print(Jf_2)\n",
+    "#print(\"\\n\")\n",
     "# Calculate the determinant\n",
     "determinate = np.linalg.det(Jf_1)\n",
-    "print(\"determinate\",determinate)\n",
-    "print(\"\\n\")\n",
+    "#print(\"determinate\",determinate)\n",
+    "#print(\"\\n\")\n",
     "\n",
     "# Calculate the control input\n",
     "dp = controller.ibvs_controller(Jf, f_act, f_des, KiBVS)\n",
-    "print(\"dp\",dp)\n"
+    "print(\"dp\",dp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eypoints,iteration_number,delta_loop,delta_interference,delta_extract_featurepoints,dp,delta_camera\n",
+    "\"[keypoints]\",goal keypoints,,1.604877,1.608635\n",
+    "\"[keypoints]\",1,0.061338,0.006977,0.010922,\"[[-1.58828798e-05]\n",
+    " [ 2.74660677e-05]\n",
+    " [ 2.14660313e-07]\n",
+    " [-1.23442061e-09]\n",
+    " [ 2.69648595e-10]\n",
+    " [ 7.45256395e-08]]\",0.020951"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keypoints,iteration_number,delta_loop,delta_interference,delta_extract_featurepoints,dp,delta_camera\n",
+    "\"[keypoints]\",1,0.116473,\"[[ 4.49646726e-02]\n",
+    " [ 3.87386286e-02]\n",
+    " [ 1.63304096e-04]\n",
+    " [-1.56485665e-07]\n",
+    " [ 6.38798036e-08]\n",
+    " [-5.25410164e-06]]\",0.088373"
    ]
   }
  ],
