--- a/007b_Analyse_Servoing_hough.ipynb
+++ b/007b_Analyse_Servoing_hough.ipynb
@@ -56,76 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "goal_informations, servoing_informations= read_csv_file(\"/home/scco0002/F&E_DeepLearning_VS/F-E-Project_Part_2/servoing_csv/keypoints_servoing.csv\")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Get the time values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "interference_neural_networks = [] # only nn\n",
-    "time_for_keypoint_extraction = [] # keypoint extraction function\n",
-    "time_for_servoing_loop = [] # hole servoing loop\n",
-    "time_for_picture = [] # time for taking a picture\n",
-    "\n",
-    "for i in range(len(servoing_informations)):\n",
-    "    time_for_servoing_loop.append(float(servoing_informations[i][2]))\n",
-    "    #interference_neural_networks.append(float(servoing_informations[i][3]))\n",
-    "    time_for_keypoint_extraction.append(float(servoing_informations[i][4]))\n",
-    "    #time_for_picture.append(float(servoing_informations[i][6]))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Generate random data for mean values (example)\n",
-    "mean_interference_neural_networks = np.array(interference_neural_networks).mean()\n",
-    "mean_time_for_keypoint_extraction = np.array(time_for_keypoint_extraction).mean()\n",
-    "mean_time_for_servoing_loop = np.array(time_for_servoing_loop).mean()\n",
-    "mean_time_for_picture = np.array(time_for_picture).mean()\n",
-    "\n",
-    "# Create the figure and subplots\n",
-    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(30, 10))\n",
-    "\n",
-    "# Plot the upper code on the left subplot (ax1)\n",
-    "ax1.plot(interference_neural_networks, label=\"Interference Neural Network\")\n",
-    "ax1.plot(time_for_keypoint_extraction, label=\"Time for Interference + Keypoint Extraction\")\n",
-    "ax1.plot(time_for_servoing_loop, label=\"Time for Servoing Loop\")\n",
-    "ax1.plot(time_for_picture, label=\"Time for Taking a Picture\")\n",
-    "ax1.set_xlabel(\"Servoing Step\", fontsize=14)\n",
-    "ax1.set_ylabel(\"Time in s\", fontsize=14)\n",
-    "legend = ax1.legend(loc='lower center', bbox_to_anchor=(0.5, -0.3), ncol=2, fontsize=14)\n",
-    "ax1.set_ylim(0, max(mean_interference_neural_networks, mean_time_for_keypoint_extraction, mean_time_for_servoing_loop)*1.4)\n",
-    "ax1.title.set_text('Time Values while Servoing')\n",
-    "ax1.title.set_fontsize(18)\n",
-    "\n",
-    "# Plot the mean values on the right subplot (ax2)\n",
-    "ax2.axhline(y=mean_interference_neural_networks, color=\"blue\",label=\"Mean Interference Neural Network\")\n",
-    "ax2.axhline(y=mean_time_for_keypoint_extraction, color=\"orange\",label=\"Mean Time for Interference + Keypoint Extraction\")\n",
-    "ax2.axhline(y=mean_time_for_servoing_loop, color=\"green\",label=\"Mean for Servoing Loop\")\n",
-    "ax2.axhline(y=mean_time_for_picture, color=\"red\",label=\"Mean for Taking a Picture\")\n",
-    "ax2.set_ylabel(\"Time in s\", fontsize=14)\n",
-    "legend = ax2.legend(loc='lower center', bbox_to_anchor=(0.5, -0.3), ncol=2, fontsize=14)\n",
-    "ax2.set_ylim(0, max(mean_interference_neural_networks, mean_time_for_keypoint_extraction, mean_time_for_servoing_loop)*1.4)\n",
-    "ax2.title.set_text('Mean Time Values')\n",
-    "ax2.title.set_fontsize(18)\n",
-    "\n",
-    "# Display the plot\n",
-    "plt.suptitle('Time Values while Servoing', fontsize=24)\n",
-    "plt.show()\n"
+    "goal_informations, servoing_informations= read_csv_file(\"/home/scco0002/catkin_ws/src/iaps_ur5e_sim/scripts/kovis_moduls/keypoints_servoing.csv\")"
    ]
   },
   {
@@ -197,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_keypoints = 6  # Assuming num_keypoints is the total number of keypoints\n",
+    "num_keypoints = 4  # Assuming num_keypoints is the total number of keypoints\n",
     "\n",
     "plt.figure(figsize=(10, 6))  # Optional: Set the size of the figure\n",
     "\n",
@@ -232,7 +163,7 @@
     "velocity = [] # hole servoing loop\n",
     "\n",
     "for i in range(len(servoing_informations)):\n",
-    "    string = servoing_informations[i][5]\n",
+    "    string = servoing_informations[i][3]\n",
     "    clean_string = re.sub(r'[^\\d.eE+-]+', ' ', string)\n",
     "    values = re.findall(r\"[-+]?\\d+(?:\\.\\d+)?(?:[eE][-+]?\\d+)?\", clean_string)\n",
     "    float_values = [float(value) for value in values]\n",
