--- a/009_hough.ipynb
+++ b/009_hough.ipynb
@@ -197,7 +197,7 @@
     "def get_keypoints_hough(image, attempts=0, max_attempts=50):\n",
     "    gray_image = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
     "    blurred_image = cv2.GaussianBlur(gray_image, (5, 5), 0)\n",
-    "    circles = cv2.HoughCircles(blurred_image, cv2.HOUGH_GRADIENT, dp=1, minDist=50,\n",
+    "    circles = cv2.HoughCircles(blurred_image, cv2.HOUGH_GRADIENT, dp=1, minDist=25,\n",
     "                                param1=30, param2=30, minRadius=20, maxRadius=150)\n",
     "    # param 2 min 30\n",
     "    \n",
@@ -219,6 +219,65 @@
     "    \n",
     "    \n",
     "    return keypoints\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_goal= cv2.imread('Kreise_fulled.png')\n",
+    "keypoints_goal = get_keypoints_hough(image_goal)\n",
+    "print (keypoints_goal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sort_keypoints_old(keypoints):\n",
+    "    return sorted(keypoints, key=lambda k: (k[0], k[1]))\n",
+    "\n",
+    "def sort_keypoints(keypoints):\n",
+    "    return sorted(keypoints, key=lambda k: (k[2]**2)*np.pi, reverse=True) \n",
+    "    # Sortiert nach der Fläche des Kreises in absteigender Reihenfolge\n",
+    "\n",
+    "def remove_radius(keypoints_sorted):\n",
+    "    return [k[:2] for k in keypoints_sorted]\n",
+    "\n",
+    "\n",
+    "def get_keypoints_hough(image, attempts=0, max_attempts=50):\n",
+    "    gray_image = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "    blurred_image = cv2.GaussianBlur(gray_image, (5, 5), 0)\n",
+    "    circles = cv2.HoughCircles(blurred_image, cv2.HOUGH_GRADIENT, dp=1, minDist=50,\n",
+    "                                param1=30, param2=30, minRadius=20, maxRadius=150)\n",
+    "    # param 2 min 30\n",
+    "    \n",
+    "    keypoints = []\n",
+    "    if circles is not None:\n",
+    "        circles = np.round(circles[0, :]).astype(int)\n",
+    "        for (x, y, r) in circles:\n",
+    "            cv2.circle(image, (x, y), r, (0, 255, 0), 2)\n",
+    "            keypoints.append([x,y,r])\n",
+    "    else:\n",
+    "        print(\"No circles found.\")\n",
+    "    \n",
+    "    # If not enough keypoints are found and the maximum number of attempts is not reached\n",
+    "    if len(keypoints) < 6 and attempts < max_attempts:\n",
+    "        print(f\"Not enough keypoints found. Attempt {attempts + 1} of {max_attempts}\")\n",
+    "        return get_keypoints_hough(image, attempts=attempts+1)\n",
+    "    elif attempts == max_attempts:\n",
+    "        print(f\"Maximum number of attempts reached. Found {len(keypoints)} keypoints.\")\n",
+    "    \n",
+    "    # Sort the keypoints\n",
+    "    keypoints_sorted = sort_keypoints(keypoints)\n",
+    "    keypoints_without_radius = remove_radius(keypoints_sorted)\n",
+    "    print(\"keypoints_sorted: \",keypoints_sorted)\n",
+    "    print(\"keypoints_without_radius: \",keypoints_without_radius)\n",
+    "    return keypoints_without_radius"
    ]
   },
   {
