--- a/007_Analyse_Servoing.ipynb
+++ b/007_Analyse_Servoing.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "goal_informations, servoing_informations= read_csv_file(\"/home/scco0002/F&E_DeepLearning_VS/F-E-Project_Part_2/servoing_csv/keypoints_servoing.csv\")"
+    "goal_informations, servoing_informations= read_csv_file(\"/home/scco0002/catkin_ws/src/iaps_ur5e_sim/scripts/kovis_moduls/keypoints_servoing.csv\")"
    ]
   },
   {
@@ -80,9 +80,9 @@
     "\n",
     "for i in range(len(servoing_informations)):\n",
     "    time_for_servoing_loop.append(float(servoing_informations[i][2]))\n",
-    "    #interference_neural_networks.append(float(servoing_informations[i][3]))\n",
+    "    interference_neural_networks.append(float(servoing_informations[i][3]))\n",
     "    time_for_keypoint_extraction.append(float(servoing_informations[i][4]))\n",
-    "    #time_for_picture.append(float(servoing_informations[i][6]))\n"
+    "    time_for_picture.append(float(servoing_informations[i][6]))\n"
    ]
   },
   {
@@ -96,6 +96,12 @@
     "mean_time_for_keypoint_extraction = np.array(time_for_keypoint_extraction).mean()\n",
     "mean_time_for_servoing_loop = np.array(time_for_servoing_loop).mean()\n",
     "mean_time_for_picture = np.array(time_for_picture).mean()\n",
+    "\n",
+    "print(\"Mean Interference Neural Network: \", mean_interference_neural_networks)\n",
+    "print(\"Mean Time for Interference + Keypoint Extraction: \", mean_time_for_keypoint_extraction)\n",
+    "print(\"Mean Time for Servoing Loop: \", mean_time_for_servoing_loop)\n",
+    "print(\"Mean Time for Taking a Picture: \", mean_time_for_picture)\n",
+    "\n",
     "\n",
     "# Create the figure and subplots\n",
     "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(30, 10))\n",
@@ -197,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_keypoints = 6  # Assuming num_keypoints is the total number of keypoints\n",
+    "num_keypoints = len(goal_featurepoints)\n",
     "\n",
     "plt.figure(figsize=(10, 6))  # Optional: Set the size of the figure\n",
     "\n",
@@ -314,6 +320,34 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Linarty of Key Points over time\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We want to analyse the servoing informations[6]\n",
+    "lin_factor = []\n",
+    "for i in range(len(servoing_informations)):\n",
+    "    lin_factor.append(servoing_informations[i][7])\n",
+    "\n",
+    "# Plot the linear factor\n",
+    "plt.figure(figsize=(15, 5))\n",
+    "plt.plot(lin_factor)\n",
+    "plt.title('Linear factor')\n",
+    "plt.xlabel('Iteration')\n",
+    "plt.ylabel('Linear factor')\n",
+    "plt.show()\n",
+    "    "
    ]
   },
   {
